# farce

./: Cargo.toml  Dockerfile  cmd.txt  out.wasm  user_code.rs  user_code.wasm
api/: Cargo.toml
api/src/: main.rs
src/: boilerplate.rs  main.rs  sandbox.rs  sandbox_v1.rs  sandbox_v2.rs  scaffold.rs
template/: Cargo.toml
templates/arbitrary/: Cargo.toml
templates/arbitrary/src/: lib.rs  scaffold.rs
templates/decode/: Cargo.toml
templates/decode/src/: boilerplate.rs  lib.rs  scaffold.rs
templates/decoder/: Cargo.toml
templates/decoder/src/: lib.rs
templates/param/src/: boilerplate.rs  lib.rs
templates/prime/src/: lib.rs  scaffold.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  submission.rs
