[package]
name = "farce"
version = "0.1.0"
edition = "2021"
exclude = ["/template "]

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.135"
tempfile = "3.15.0"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing-subscriber = "0.3.19"
wasi-common = "28.0.0"
wasmtime = "28.0.0"
